--- a/src/notes/typescriptcourse/01.md
+++ b/src/notes/typescriptcourse/01.md
@@ -78,7 +78,7 @@ TypeScript 支持基于类的面向对象编程。
 ```typescript
 class Student {
   fullName: string;
-  constructor(public firstName, public middleInitial, public lastName) {
+  constructor(public firstName:string, public middleInitial:string, public lastName:string) {
     this.fullName = firstName + " " + middleInitial + " " + lastName;
   }
 }
