--- a/src/notes/typescriptcourse/02.md
+++ b/src/notes/typescriptcourse/02.md
@@ -6,73 +6,110 @@
 let boolValue: boolean = false;
 ```
 
-2. 数字
+2. 数字（十进制和十六进制字面量，TypeScript 还支持 ECMAScript 2015 中引入的二进制和八进制字面量。）
 
 ```typescript
-let numberValue: number = 1;
+let decLiteral: number = 6; //6
+let hexLiteral: number = 0xf00d; //61453
+let binaryLiteral: number = 0b1010; //10
+let octalLiteral: number = 0o744; //484
 ```
 
-3. 字符串
+1. 字符串（模版字符串，它可以定义多行文本和内嵌表达式。 这种字符串是被反引号包围（ `），并且以\${ expr }这种形式嵌入表达式）
 
 ```typescript
 let stringValue: string = "str";
+let userName: string = `huang 7000`; //huang 7000
+//模版字符串
+let sentence: string = `Hello, my name is ${userName}.`; //Hello, my name is huang 7000.
 ```
 
-4. 数组
+1. 数组
 
 ```typescript
 let numberList: number[] = [1, 2, 3];
-let tList: Array<number> = [1, 2, 3];
-let objectlist: [string, number] = ["hello", 10];
-let readolyArray: ReadonlyArray<number> = [1, 2, 3, 4];
+let numList: Array<number> = [1, 2, 3];
+let readolyArray: ReadonlyArray<number> = [1, 2, 3, 4]; //只读数组
 ```
 
-5. 枚举
+5. 元组 Tuple（元组类型允许表示一个已知元素数量和类型的数组，各元素的类型不必相同。）
+
+```typescript
+let objectlist: [string, number] = ["hello", 10]; //元组 Tuple
+console.log(objectlist[0]); // hello
+objectlist[0] = 5; //error : Type '5' is not assignable to type 'string'.
+//当访问一个越界的元素，会使用联合类型替代
+objectlist[3] = 333; //333
+objectlist[3] = "hi"; //hi
+objectlist[3] = true; // Error, 布尔不是(string | number)类型
+let tupleList: [string, number, boolean] = ["hello", 10, true]; //元组 Tuple
+```
+
+6. 枚举（默认情况下，从 0 开始为元素编号。亦可手动赋值）
 
 ```typescript
 enum ColorEnum {
   Red = 1,
   Green = 2,
-  Blue = 4
+  Blue = 4,
 }
 let color: ColorEnum = ColorEnum.Green;
 ```
 
-6. any
+7. any （编程阶段还不清楚类型的变量指定一个类型。）
 
 ```typescript
 let notSure: any = 4;
 notSure = "maybe a string instead";
 notSure = false;
+//数组，它包含了不同的类型的数据 感觉有点类似元组
+let list: any[] = [1, true, "free"];
 ```
 
-7. void
+8. void
 
 ```typescript
-let unusable: void = undefined;
+// 当一个函数没有返回值时，你通常会见到其返回值类型是 void：
+function warnUser(): void {
+  console.log("This is my warning message");
+}
+//声明一个void类型的变量没有什么大用，因为你只能为它赋予undefined和null：
+let undefinedable: void = undefined;
+let nullsable: void = null;
 ```
 
-8. null
+9. null
 
 ```typescript
 let nullValue: null = null;
 ```
 
-9. undefined
+10. undefined
 
 ```typescript
 let undefinedValue: undefined = undefined;
 ```
 
-10. never
+11. never （类型表示的是那些永不存在的值的类型。）
 
 ```typescript
+// 返回never的函数必须存在无法达到的终点
 function error(message: string): never {
   throw new Error(message);
 }
+
+// 推断的返回值类型为never
+function fail() {
+  return error("Something failed");
+}
+
+// 返回never的函数必须存在无法达到的终点
+function infiniteLoop(): never {
+  while (true) {}
+}
 ```
 
-11. object
+11. object （object表示非原始类型，也就是除number，string，boolean，symbol，null或undefined之外的类型。）
 
 ```typescript
 let objectValue: object = {};
