--- a/src/notes/typescriptcourse/02.md
+++ b/src/notes/typescriptcourse/02.md
@@ -103,10 +103,11 @@ function fail() {
   return error("Something failed");
 }
 
-// 返回never的函数必须存在无法达到的终点
+//死循环 返回never的函数必须存在无法达到的终点
 function infiniteLoop(): never {
   while (true) {}
 }
+//无限递归
 ```
 
 11. object （object表示非原始类型，也就是除number，string，boolean，symbol，null或undefined之外的类型。）
