--- a/src/notes/typescriptcourse/04.md
+++ b/src/notes/typescriptcourse/04.md
@@ -1,6 +1,4 @@
-:::snippet 接口 Interface
-
-1. 基本类型接口
+:::snippet 基本类型接口
 
 ```typescript
 interface IInterface {
@@ -15,7 +13,51 @@ interface IInterface {
 }
 ```
 
-2. 函数类型定义
+:::
+
+:::snippet 只读属性
+
+```typescript
+interface Point {
+  readonly x: number;
+  readonly y: number;
+}
+let p1: Point = { x: 10, y: 20 };
+p1.x = 5; // error!
+let a: number[] = [1, 2, 3, 4];
+let ro: ReadonlyArray<number> = a;
+ro[0] = 12; // error!
+ro.push(5); // error!
+ro.length = 100; // error!
+a = ro; // error!
+a = ro as number[]; // ok 类型断言重写
+```
+
+:::
+
+:::snippet 额外的属性检查
+
+```typescript
+interface SquareConfig {
+  color?: string;
+  width?: number;
+}
+function createSquare(config: SquareConfig): { color: string; area: number } {
+  // ...
+  console.log(config);
+}
+//使用类型断言
+let mySquareOk = createSquare({ width: 100, opacity: 0.5 } as SquareConfig);
+//这个对象赋值给一个另一个变量： 因为 squareOptions不会经过额外属性检查
+let squareOptions = { colour: "redok", width: 100 };
+let mySquareTrue = createSquare(squareOptions);
+// error: 'colour' not expected in type 'SquareConfig'
+let mySquareError = createSquare({ colour: "rederror", width: 100 });
+```
+
+:::
+
+:::snippet 函数类型定义
 
 ```typescript
 interface SearchFunc {
@@ -23,15 +65,21 @@ interface SearchFunc {
 }
 let search: SearchFunc = function(source: string, subString: string) {
   let result = source.search(subString);
-  if (result == -1) {
-    return false;
-  } else {
-    return true;
-  }
+  return result == -1;
+};
+
+let mySearch: SearchFunc;
+mySearch = function(src: string, sub: string): boolean {
+  let result = src.search(sub);
+  return result > -1;
 };
 ```
 
-3. 索引类型定义
+:::
+
+:::snippet 索引类型定义
+
+定义索引类型还定义其他属性必须保证其他属性的类型与索引对应的值相同
 
 ```typescript
 interface StringArray {
@@ -39,65 +87,152 @@ interface StringArray {
 }
 let myArray: StringArray = ["Bob", "Fred"];
 let myStr: string = myArray[0];
+//定义索引类型还定义其他属性必须保证其他属性的类型与索引对应的值相同
+class Animal {
+    name: string;
+}
+class Dog extends Animal {
+    breed: string;
+}
+
+// 错误：使用数值型的字符串索引，有时会得到完全不同的Animal!
+interface NotOkay {
+    [x: number]: Animal;
+    [x: string]: Dog;
+}
 ```
+
+dictionary模式，并且它们也会确保所有属性与其返回值类型相匹配。
 
 ```typescript
 interface NumberDictionary {
   [index: string]: number;
-  length: number;
+  length: number; // 可以，length是number类型
+  name: string; // 错误，`name`的类型与索引类型返回值的类型不匹配
 }
 ```
 
-> 定义索引类型还定义其他属性必须保证其他属性的类型与索引对应的值相同
-
-4. 实现接口
+索引签名设置为只读，这样就防止了给索引赋值
 
 ```typescript
-class interfaceBaseClass implements IInterface {
-  label = "labelValue";
-  width = 100;
-  name = "interface";
-  readName() {
-    return this.name;
-  }
-  propKey = "propValiue";
+interface ReadonlyStringArray {
+    readonly [index: number]: string;
+}
+let myArray: ReadonlyStringArray = ["Alice", "Bob"];
+myArray[2] = "Mallory"; // error!
+```
+
+:::
+
+:::snippet 实现接口 implements
+
+接口描述了类的公共部分，而不是公共和私有两部分。 它不会帮你检查类是否具有某些私有成员。
+
+```typescript
+interface ClockInterface {
+    currentTime: Date;
+    setTime(d: Date);
+}
+
+class Clock implements ClockInterface {
+    currentTime: Date;
+    setTime(d: Date) {
+        this.currentTime = d;
+    }
+    constructor(h: number, m: number) { }
+}
+
+```
+
+:::
+
+:::snippet 类静态部分与实例部分的区别
+类是具有两个类型的：静态部分的类型和实例的类型。
+你用构造器签名去定义一个接口并试图定义一个类去实现这个接口时会得到一个错误
+
+```typescript
+interface ClockConstructor {
+    new (hour: number, minute: number);
+}
+
+class Clock implements ClockConstructor {
+    currentTime: Date;
+    constructor(h: number, m: number) { }
 }
 ```
 
-5. 接口参数限定
+正确实例
 
 ```typescript
-let interfaceFunc = (params: IInterface): void => {};
+interface ClockConstructor {
+    new (hour: number, minute: number): ClockInterface;
+}
+interface ClockInterface {
+    tick();
+}
+
+function createClock(ctor: ClockConstructor, hour: number, minute: number): ClockInterface {
+    return new ctor(hour, minute);
+}
+
+class DigitalClock implements ClockInterface {
+    constructor(h: number, m: number) { }
+    tick() {
+        console.log("beep beep");
+    }
+}
+class AnalogClock implements ClockInterface {
+    constructor(h: number, m: number) { }
+    tick() {
+        console.log("tick tock");
+    }
+}
+
+let digital = createClock(DigitalClock, 12, 17);
+let analog = createClock(AnalogClock, 7, 32);
 ```
 
-6. 扩展接口
+:::
+
+:::snippet 继承接口 一个接口可以继承一个或多个接口
 
 ```typescript
 interface Shape {
-  color: string;
+    color: string;
 }
+
 interface PenStroke {
-  penWidth: number;
+    penWidth: number;
 }
+
 interface Square extends Shape, PenStroke {
-  sideLength: number;
+    sideLength: number;
 }
+
+let square = <Square>{};
+square.color = "blue";
+square.sideLength = 10;
+square.penWidth = 5.0;
 ```
 
-7. 混合类型
+:::
+
+:::snippet 混合类型
 
 ```typescript
 interface Counter {
-  (start: number): string;
-  interval: number;
-  reset(): void;
+    (start: number): string;
+    interval: number;
+    reset(): void;
 }
+
 function getCounter(): Counter {
-  let counter = <Counter>function(start: number) {};
-  counter.interval = 123;
-  counter.reset = function() {};
-  return counter;
+    let counter = <Counter>function (start: number) { };
+    counter.interval = 123;
+    counter.reset = function () { };
+    return counter;
 }
+
 let c = getCounter();
 c(10);
 c.reset();
@@ -106,163 +241,32 @@ c.interval = 5.0;
 
 :::
 
-:::snippet 类 Class
-
-1. 基本定义
+:::snippet 接口继承类
 
 ```typescript
-class Greeter {
-  greeting: string;
-  constructor(message: string) {
-    this.greeting = message;
-  }
-  greet() {
-    return "Hello, " + this.greeting;
-  }
+class Control {
+    private state: any;
 }
-let greeter = new Greeter("world");
-```
 
-2. 继承
-
-```typescript
-class Animal {
-  name: string;
-  constructor(theName: string) {
-    this.name = theName;
-  }
-  move(distanceInMeters: number = 0) {
-    console.log(`${this.name} moved ${distanceInMeters}m.`);
-  }
+interface SelectableControl extends Control {
+    select(): void;
 }
-class Snake extends Animal {
-  constructor(name: string) {
-    super(name);
-  }
-  move(distanceInMeters = 5) {
-    console.log("Slithering...");
-    super.move(distanceInMeters);
-  }
+
+class Button extends Control implements SelectableControl {
+    select() { }
 }
-class Horse extends Animal {
-  constructor(name: string) {
-    super(name);
-  }
-  move(distanceInMeters = 45) {
-    console.log("Galloping...");
-    super.move(distanceInMeters);
-  }
+
+class TextBox extends Control {
+    select() { }
 }
-let sam = new Snake("Sammy the Python");
-let tom: Animal = new Horse("Tommy the Palomino");
-sam.move();
-tom.move(34);
-```
 
-3. 修饰符
-
-```typescript
-class Human {
-  public name: string;
-  private age: number;
-  protected money: string;
+// 错误：“Image”类型缺少“state”属性。
+class Image implements SelectableControl {
+    select() { }
 }
-```
 
-| 修饰符    | 描述               |
-| :-------- | :----------------- |
-| public    | 任意位置都可以访问 |
-| private   | 当前类中可以访问   |
-| protected | 当前类和子类可访问 |
+class Location {
 
-4. 只读属性
-
-```typescript
-class Octopus {
-  readonly name: string;
-  private readonly numberOfLegs: number = 8;
-  constructor(theName: string) {
-    this.name = theName;
-  }
-}
-```
-
-> readonly 设置只读可以放置在访问修饰符前面多重限定
-
-5. 存取器
-
-```typescript
-class Employee {
-  private _fullName: string;
-  get fullName(): string {
-    return this._fullName;
-  }
-  set fullName(newName: string) {
-    this._fullName = newName;
-  }
-}
-let employee = new Employee();
-employee.fullName = "Bob Smith";
-alert(employee.fullName);
-```
-
-6. 静态属性
-
-```typescript
-class Grid {
-  static origin = { x: 0, y: 0 };
-}
-console.log(Grid.origin);
-```
-
-7. 抽象类
-
-```typescript
-abstract class Department {
-  constructor(public name: string) {}
-  printName(): void {
-    console.log("Department name: " + this.name);
-  }
-  abstract printMeeting(): void; // 必须在派生类中实现
-}
-```
-
-> 只能被集成不能被实例化
-
-:::
-
-:::snippet 泛型
-
-1. 泛型类
-
-```typescript
-class GenericNumber<T> {
-  zeroValue: T;
-  add: (x: T, y: T) => T;
-}
-let myGenericNumber = new GenericNumber<number>();
-myGenericNumber.zeroValue = 0;
-myGenericNumber.add = function(x, y) {
-  return x + y;
-};
-```
-
-2. 泛型约束
-
-```typescript
-interface Lengthwise {
-  length: number;
-}
-function loggingIdentity<T extends Lengthwise>(arg: T): T {
-  return arg;
-}
-```
-
-3. 泛型构造函数
-
-```typescript
-function create<T>(c: { new (): T }): T {
-  return new c();
 }
 ```
 
