--- a/src/notes/vuecourse/23.md
+++ b/src/notes/vuecourse/23.md
@@ -220,7 +220,7 @@ new Vue({
 
 ```javascript
 render: function (createElement) {
-  var myParagraphVNode = createElement('p', 'hi') 
+  var myParagraphVNode = createElement('p', 'hi')
   return createElement('div', [
     // 错误 - 重复的 VNode
     myParagraphVNode, myParagraphVNode
@@ -238,6 +238,303 @@ render: function (createElement) {
     })
   )
 }
+```
+
+:::
+
+:::snippet 使用 JavaScript 代替模板功能
+
+v-if 和 v-for 的模板
+
+```html
+<div id="example-template">
+  <ul v-if="items.length">
+    <li v-for="item in items">{{ item.name }}</li>
+  </ul>
+  <p v-else>No items found.</p>
+</div>
+```
+
+```javascript
+new Vue({
+  el: "#example-template",
+  data: {
+    items: [
+      {
+        name: "Foo",
+      },
+      {
+        name: "Bar",
+      },
+    ],
+  },
+});
+```
+
+v-if 和 v-for 的 render
+
+```html
+<div id="example-render">
+  <example-render :items="items"></example-render>
+</div>
+```
+
+```javascript
+Vue.component("example-render", {
+  //简写
+  render(h) {
+    if (this.items.length) {
+      return h(
+        "ul",
+        this.items.map(function(item) {
+          return h("li", item.name);
+        })
+      );
+    } else {
+      return h("p", "No items found.");
+    }
+  },
+  props: ["items"],
+});
+new Vue({
+  el: "#example-render",
+  data: {
+    items: [
+      {
+        name: "Foo",
+      },
+      {
+        name: "Bar",
+      },
+    ],
+  },
+});
+```
+
+:::
+
+:::snippet 使用 JavaScript 代替模板功能
+
+v-model 的模板
+
+```html
+  <div id="example-template">
+    <input :value="value" @input="input"></input>
+    {{value}}
+    <br>
+    <example-template :value2="value2" @input="input2" ></example-template>
+    {{value2}}
+  </div>
+```
+
+```javascript
+Vue.component("example-template", {
+  props: ["value2"],
+  template: `<input :value="value2" @input="$emit('input',$event.target.value)"></input>`,
+});
+new Vue({
+  el: "#example-template",
+  data: {
+    value: "templatevalue",
+    value2: "templatevalue2",
+  },
+  methods: {
+    input(event) {
+      this.value = event.target.value;
+    },
+    input2(value) {
+      this.value2 = value;
+    },
+  },
+});
+```
+
+v-model 的 render
+
+```html
+<div id="example-render">
+  <example-render :value="value" @input="input"></example-render>
+  {{value}}
+</div>
+```
+
+```javascript
+Vue.component("example-render", {
+  props: ["value"],
+  render: function(createElement) {
+    var self = this;
+    return createElement("input", {
+      domProps: {
+        value: self.value,
+      },
+      on: {
+        input: function(event) {
+          self.$emit("input", event.target.value);
+        },
+      },
+    });
+  },
+});
+new Vue({
+  el: "#example-render",
+  data: {
+    value: "rendervalue",
+  },
+  methods: {
+    input(value) {
+      console.log(value);
+      this.value = value;
+    },
+  },
+});
+```
+
+事件 & 按键修饰符
+
+对于 .passive、.capture 和 .once 这些事件修饰符，Vue 提供了相应的前缀可以用于 on：
+| 修饰符 | 前缀 |
+| `.passive` | `&`|
+| `.capture` | `!`|
+| `.once` | `~`|
+| `..capture.once`或 `.once.capture` | `~!`|
+
+```javascript
+on: {
+  '!click': this.doThisInCapturingMode,
+  '~keyup': this.doThisOnce,
+  '~!mouseover': this.doThisOnceInCapturingMode
+}
+```
+
+| 修饰符 | 处理函数中的等价操作 |
+| `.stop` | `event.stopPropagation()`|
+| `.prevent` | `event.preventDefault()`|
+| `.self` | `if (event.target !== event.currentTarget) return`|
+| 按键：`.enter`，`.13` | `if (event.keyCode !== 13) return` (对于别的按键修饰符来说，可将 13 改为另一个按键码)|
+| 修饰键：`.ctrl`，`.alt`,`.shift`，`.meta` | `if (!event.ctrlKey) return` (将 ctrlKey 分别修改为 altKey、shiftKey 或者 metaKey)|
+
+这里是一个使用所有修饰符的例子：
+
+```javascript
+on: {
+  keyup: function (event) {
+    // 如果触发事件的元素不是事件绑定的元素
+    // 则返回
+    if (event.target !== event.currentTarget) return
+    // 如果按下去的不是 enter 键或者
+    // 没有同时按下 shift 键
+    // 则返回
+    if (!event.shiftKey || event.keyCode !== 13) return
+    // 阻止 事件冒泡
+    event.stopPropagation()
+    // 阻止该元素默认的 keyup 事件
+    event.preventDefault()
+    // ...
+  }
+}
+```
+
+插槽
+
+this.\$slots 访问静态插槽的内容，每个插槽都是一个 VNode 数组
+模版写法：
+
+```html
+<div><slot></slot></div>
+```
+
+渲染函数写法：
+
+```javascript
+render: function (createElement) {
+  return createElement('div', this.$slots.default) //this.$slots.default是默认插槽的内容，注意是虚拟节点数组
+}
+```
+
+this.\$scopedSlots 访问作用域插槽，每个作用域插槽都是一个返回若干 VNode 的函数
+模版写法：
+
+```html
+<div><slot :text="message"></slot></div>
+```
+
+渲染函数写法：
+
+```javascript
+props: ['message'],
+render: function (createElement) {
+  return createElement('div', [
+    this.$scopedSlots.default({
+      text: this.message
+    })
+  ])
+}
+```
+
+渲染函数向子组件中传递作用域插槽，可以利用 VNode 数据对象中的 scopedSlots 字段
+模版写法：
+
+```html
+<div>
+  <child slot-scope="default">
+    <span>{{default.text}}</span>
+  </child>
+</div>
+```
+
+渲染函数写法：
+
+```javascript
+render: function (createElement) {
+  return createElement('div', [
+    createElement('child', {
+      // 在数据对象中传递 `scopedSlots`
+      // 格式为 { name: props => VNode | Array<VNode> }
+      scopedSlots: {
+        default: function (props) {
+          return createElement('span', props.text)
+        }
+      }
+    })
+  ])
+}
+```
+
+:::
+
+:::snippet JSX
+
+组件树中的所有 VNode 必须是唯一的。这意味着，下面的渲染函数是不合法的：
+
+```javascript
+createElement(
+  "anchored-heading",
+  {
+    props: {
+      level: 1,
+    },
+  },
+  [createElement("span", "Hello"), " world!"]
+);
+```
+
+```html
+<anchored-heading :level="1"> <span>Hello</span> world! </anchored-heading>
+```
+
+```javascript
+import AnchoredHeading from "./AnchoredHeading.vue";
+
+new Vue({
+  el: "#demo",
+  render: function(h) {
+    return (
+      <AnchoredHeading level={1}>
+        <span>Hello</span> world!
+      </AnchoredHeading>
+    );
+  },
+});
 ```
 
 :::
