--- a/src/notes/vuecourse/23.md
+++ b/src/notes/vuecourse/23.md
@@ -538,3 +538,235 @@ new Vue({
 ```
 
 :::
+
+:::snippet 函数式组件
+组件标记为 functional，这意味它无状态 (没有响应式数据)，也没有实例 (没有 this 上下文)。一个函数式组件
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- 基于模板的函数式组件 -->
+<template functional> </template>
+```
+
+```javascript
+Vue.component("my-component", {
+  functional: true,
+  // Props 是可选的
+  props: {
+    // ...
+  },
+  // 为了弥补缺少的实例
+  // 提供第二个参数作为上下文
+  render: function(createElement, context) {
+    // ...
+  },
+});
+```
+
+在添加 functional: true 之后，需要更新我们的锚点标题组件的渲染函数，为其增加 context 参数，并将 this.\$slots.default 更新为 context.children，然后将 this.level 更新为 context.props.level。
+
+```javascript
+var EmptyList = {
+  /* ... */
+};
+var TableList = {
+  /* ... */
+};
+var OrderedList = {
+  /* ... */
+};
+var UnorderedList = {
+  /* ... */
+};
+
+Vue.component("smart-list", {
+  functional: true,
+  props: {
+    items: {
+      type: Array,
+      required: true,
+    },
+    isOrdered: Boolean,
+  },
+  render: function(createElement, context) {
+    function appropriateListComponent() {
+      var items = context.props.items;
+
+      if (items.length === 0) return EmptyList;
+      if (typeof items[0] === "object") return TableList;
+      if (context.props.isOrdered) return OrderedList;
+
+      return UnorderedList;
+    }
+
+    return createElement(
+      appropriateListComponent(),
+      context.data,
+      context.children
+    );
+  },
+});
+```
+
+:::
+
+:::snippet 向子元素或子组件传递 attribute 和事件
+组件标记为 functional，这意味它无状态 (没有响应式数据)，也没有实例 (没有 this 上下文)。一个函数式组件
+
+```html
+<template functional>
+  <button class="btn btn-primary" v-bind="data.attrs" v-on="listeners">
+    <slot></slot>
+  </button>
+</template>
+```
+
+```javascript
+Vue.component("my-functional-button", {
+  functional: true,
+  render: function(createElement, context) {
+    // 完全透传任何 attribute、事件监听器、子节点等。
+    return createElement("button", context.data, context.children);
+  },
+});
+```
+
+:::
+
+:::snippet slots() 和 children 对比
+组件标记为 functional，这意味它无状态 (没有响应式数据)，也没有实例 (没有 this 上下文)。一个函数式组件
+
+```html
+<my-functional-component>
+  <p v-slot:foo>
+    first
+  </p>
+  <p>second</p>
+</my-functional-component>
+```
+
+```javascript
+Vue.component("my-functional-button", {
+  functional: true,
+  render: function(createElement, context) {
+    // 完全透传任何 attribute、事件监听器、子节点等。
+    return createElement("button", context.data, context.children);
+  },
+});
+```
+
+:::
+
+:::snippet 案例
+组件标记为 functional，这意味它无状态 (没有响应式数据)，也没有实例 (没有 this 上下文)。一个函数式组件
+
+```html
+<div id="app5">
+  <input v-model="query" />
+  <my-transition :query="query" :list="list">
+    <li
+      v-for="(item, index) in computedList"
+      :key="item.msg"
+      :data-index="index"
+    >
+      {{item.msg}}
+    </li>
+  </my-transition>
+</div>
+```
+
+```javascript
+Vue.component("my-transition", {
+  functional: true,
+  render: function(h, ctx) {
+    var data = {
+      props: {
+        tag: "ul",
+        css: false,
+      },
+      on: {
+        beforeEnter: function(el) {
+          el.style.opacity = 0;
+          el.style.height = 0;
+        },
+        enter: function(el, done) {
+          var delay = el.dataset.index * 150;
+          setTimeout(function() {
+            Velocity(el, { opacity: 1, height: "1.6em" }, { complete: done });
+          }, delay);
+        },
+        leave: function(el, done) {
+          var delay = el.dataset.index * 150;
+          setTimeout(function() {
+            Velocity(el, { opacity: 0, height: 0 }, { complete: done });
+          }, delay);
+        },
+      },
+    };
+    return h("transition-group", data, ctx.children);
+  },
+  props: ["query", "list"],
+});
+
+var app5 = new Vue({
+  el: "#app5",
+  data: {
+    query: "",
+    list: [
+      { msg: "Bruce Lee" },
+      { msg: "Jackie Chan" },
+      { msg: "Chuck Norris" },
+      { msg: "Jet Li" },
+      { msg: "Kung Furry" },
+      { msg: "Chain Zhang" },
+      { msg: "Iris Zhao" },
+    ],
+  },
+  computed: {
+    computedList: function() {
+      var vm = this;
+      return this.list.filter(function(item) {
+        return item.msg.toLowerCase().indexOf(vm.query.toLowerCase()) !== -1;
+      });
+    },
+  },
+});
+```
+
+:::
+
+:::snippet 模板编译
+
+```html
+<div>
+  <header>
+    <h1>I'm a template!</h1>
+  </header>
+  <p v-if="message">{{ message }}</p>
+  <p v-else>No message.</p>
+</div>
+```
+
+render:
+
+```javascript
+function anonymous() {
+  with (this) {
+    return _c("div", [
+      _m(0),
+      message ? _c("p", [_v(_s(message))]) : _c("p", [_v("No message.")]),
+    ]);
+  }
+}
+```
+
+staticRenderFns:
+
+```javascript
+_m(0): function anonymous(
+) {
+  with(this){return _c('header',[_c('h1',[_v("I'm a template!")])])}
+}
+```
+
+:::
